Yocto_Infor/yocto_TXT/output_1572.txt
* [meta-security][PATCH 1/4] ibmtpm2tss: update version format
@ 2022-07-31  5:47 Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 2/4] ibmswtpm2: fix UPSTREAM_CHECK Armin Kuster
                   ` (2 more replies)
  0 siblings, 3 replies; 4+ messages in thread
From: Armin Kuster @ 2022-07-31  5:47 UTC (permalink / raw)
  To: yocto

Signed-off-by: Armin Kuster <akuster808@gmail.com>
---
 .../ibmtpm2tss/{ibmtpm2tss_1.6.0.bb => ibmtpm2tss_1661.bb}      | 2 ++
 1 file changed, 2 insertions(+)
 rename meta-tpm/recipes-tpm2/ibmtpm2tss/{ibmtpm2tss_1.6.0.bb => ibmtpm2tss_1661.bb} (91%)

diff --git a/meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1.6.0.bb b/meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1661.bb
similarity index 91%
rename from meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1.6.0.bb
rename to meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1661.bb
index e8a3710..2daca5a 100644
--- a/meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1.6.0.bb
+++ b/meta-tpm/recipes-tpm2/ibmtpm2tss/ibmtpm2tss_1661.bb
@@ -23,6 +23,8 @@ SRC_URI = "git://git.code.sf.net/p/ibmtpm20tss/tss;protocol=https;branch=master
            "
 
 UPSTREAM_CHECK_COMMITS = "1"
+UPSTREAM_CHECK_URI = "https://git.code.sf.net/p/ibmswtpm2/tpm2"
+UPSTREAM_CHECK_GITTAGREGEX = "rev.*)"
 
 EXTRA_OECONF = "--disable-tpm-1.2"
 
-- 
2.25.1



^ permalink raw reply related	[flat|nested] 4+ messages in thread
* [meta-security][PATCH 2/4] ibmswtpm2: fix UPSTREAM_CHECK
  2022-07-31  5:47 [meta-security][PATCH 1/4] ibmtpm2tss: update version format Armin Kuster
@ 2022-07-31  5:47 ` Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 3/4] ibmswtpm2: update to 1682 Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 4/4] swtpm: update to 0.7.3 Armin Kuster
  2 siblings, 0 replies; 4+ messages in thread
From: Armin Kuster @ 2022-07-31  5:47 UTC (permalink / raw)
  To: yocto

Signed-off-by: Armin Kuster <akuster808@gmail.com>
---
 meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)

diff --git a/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb b/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb
index 09b652d..c2cdf6a 100644
--- a/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb
+++ b/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb
@@ -21,7 +21,7 @@ SRC_URI = "https://sourceforge.net/projects/ibmswtpm2/files/ibmtpm${PV}.tar.gz \
 
 SRC_URI[sha256sum] = "55145928ad2b24f34be6a0eacf9fb492e10e0ea919b8428c721fa970e85d6147"
 
-UPSTREAM_CHECK_REGEX = "libtpm(?P<pver>).tar.gz"
+UPSTREAM_CHECK_URI = "https://sourceforge.net/projects/ibmswtpm2/files/"
 
 S = "${WORKDIR}/src"
 
-- 
2.25.1



^ permalink raw reply related	[flat|nested] 4+ messages in thread
* [meta-security][PATCH 3/4] ibmswtpm2: update to 1682
  2022-07-31  5:47 [meta-security][PATCH 1/4] ibmtpm2tss: update version format Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 2/4] ibmswtpm2: fix UPSTREAM_CHECK Armin Kuster
@ 2022-07-31  5:47 ` Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 4/4] swtpm: update to 0.7.3 Armin Kuster
  2 siblings, 0 replies; 4+ messages in thread
From: Armin Kuster @ 2022-07-31  5:47 UTC (permalink / raw)
  To: yocto

fixes openssl 3.0 support

Signed-off-by: Armin Kuster <akuster808@gmail.com>
---
 meta-tpm/recipes-tpm2/ibmswtpm2/files/tune-makefile.patch    | 5 +++--
 .../ibmswtpm2/{ibmswtpm2_1661.bb => ibmswtpm2_1682.bb}       | 3 +--
 2 files changed, 4 insertions(+), 4 deletions(-)
 rename meta-tpm/recipes-tpm2/ibmswtpm2/{ibmswtpm2_1661.bb => ibmswtpm2_1682.bb} (93%)

diff --git a/meta-tpm/recipes-tpm2/ibmswtpm2/files/tune-makefile.patch b/meta-tpm/recipes-tpm2/ibmswtpm2/files/tune-makefile.patch
index eebddb9..962bfc1 100644
--- a/meta-tpm/recipes-tpm2/ibmswtpm2/files/tune-makefile.patch
+++ b/meta-tpm/recipes-tpm2/ibmswtpm2/files/tune-makefile.patch
@@ -20,7 +20,7 @@ Index: src/makefile
 ===================================================================
 --- src.orig/makefile
 +++ src/makefile
-@@ -38,12 +38,10 @@
+@@ -38,13 +38,11 @@
  #################################################################################
  
  
@@ -29,12 +29,13 @@ Index: src/makefile
  CCFLAGS = -Wall  			\
  	-Wmissing-declarations -Wmissing-prototypes -Wnested-externs \
  	-Werror -Wsign-compare \
+ 	-Wno-deprecated-declarations	\
 -	 -c -ggdb -O0 			\
 +	 -c -ggdb -O 			\
  	-DTPM_POSIX			\
  	-D_POSIX_			\
  	-DTPM_NUVOTON
-@@ -79,11 +77,11 @@
+@@ -80,11 +78,11 @@ TcpServerPosix.o	: $(HEADERS)
  .PRECIOUS:	%.o
  
  tpm_server:	$(OBJFILES)
diff --git a/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb b/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1682.bb
similarity index 93%
rename from meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb
rename to meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1682.bb
index c2cdf6a..85fc7e0 100644
--- a/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1661.bb
+++ b/meta-tpm/recipes-tpm2/ibmswtpm2/ibmswtpm2_1682.bb
@@ -18,8 +18,7 @@ DEPENDS = "openssl"
 SRC_URI = "https://sourceforge.net/projects/ibmswtpm2/files/ibmtpm${PV}.tar.gz \
            file://tune-makefile.patch \
            "
-
-SRC_URI[sha256sum] = "55145928ad2b24f34be6a0eacf9fb492e10e0ea919b8428c721fa970e85d6147"
+SRC_URI[sha256sum] = "3cb642f871a17b23d50b046e5f95f449c2287415fc1e7aeb4bdbb8920dbcb38f"
 
 UPSTREAM_CHECK_URI = "https://sourceforge.net/projects/ibmswtpm2/files/"
 
-- 
2.25.1



^ permalink raw reply related	[flat|nested] 4+ messages in thread
* [meta-security][PATCH 4/4] swtpm: update to 0.7.3
  2022-07-31  5:47 [meta-security][PATCH 1/4] ibmtpm2tss: update version format Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 2/4] ibmswtpm2: fix UPSTREAM_CHECK Armin Kuster
  2022-07-31  5:47 ` [meta-security][PATCH 3/4] ibmswtpm2: update to 1682 Armin Kuster
@ 2022-07-31  5:47 ` Armin Kuster
  2 siblings, 0 replies; 4+ messages in thread
From: Armin Kuster @ 2022-07-31  5:47 UTC (permalink / raw)
  To: yocto

drop musl patch.Fix another way

Signed-off-by: Armin Kuster <akuster808@gmail.com>
---
 .../recipes-tpm/swtpm/files/ioctl_h.patch     | 22 -------------------
 .../swtpm/{swtpm_0.7.1.bb => swtpm_0.7.3.bb}  |  3 +--
 2 files changed, 1 insertion(+), 24 deletions(-)
 delete mode 100644 meta-tpm/recipes-tpm/swtpm/files/ioctl_h.patch
 rename meta-tpm/recipes-tpm/swtpm/{swtpm_0.7.1.bb => swtpm_0.7.3.bb} (95%)

diff --git a/meta-tpm/recipes-tpm/swtpm/files/ioctl_h.patch b/meta-tpm/recipes-tpm/swtpm/files/ioctl_h.patch
deleted file mode 100644
index d736bc6..0000000
--- a/meta-tpm/recipes-tpm/swtpm/files/ioctl_h.patch
+++ /dev/null
@@ -1,22 +0,0 @@
-tpm_ioctl: fix musl for missing ioctl
-
-tpm_ioctl.c: In function 'ioctl_to_cmd':
-tpm_ioctl.c:86:26: error: '_IOC_NRSHIFT' undeclared (first use in this function)
-     return ((ioctlnum >> _IOC_NRSHIFT) & _IOC_NRMASK) + 1;
-
-
-Upstream-status:
-Signed-off-by: Armin Kuster <akuster@mvista.com>
-
-Index: git/src/swtpm_ioctl/tpm_ioctl.c
-===================================================================
---- git.orig/src/swtpm_ioctl/tpm_ioctl.c
-+++ git/src/swtpm_ioctl/tpm_ioctl.c
-@@ -58,6 +58,7 @@
- #include <fcntl.h>
- #include <unistd.h>
- #include <sys/ioctl.h>
-+#include <asm/ioctl.h>
- #include <getopt.h>
- #include <sys/un.h>
- #include <sys/types.h>
diff --git a/meta-tpm/recipes-tpm/swtpm/swtpm_0.7.1.bb b/meta-tpm/recipes-tpm/swtpm/swtpm_0.7.3.bb
similarity index 95%
rename from meta-tpm/recipes-tpm/swtpm/swtpm_0.7.1.bb
rename to meta-tpm/recipes-tpm/swtpm/swtpm_0.7.3.bb
index 03899d8..55d83f9 100644
--- a/meta-tpm/recipes-tpm/swtpm/swtpm_0.7.1.bb
+++ b/meta-tpm/recipes-tpm/swtpm/swtpm_0.7.3.bb
@@ -6,9 +6,8 @@ SECTION = "apps"
 # expect-native, socat-native, coreutils-native and net-tools-native are reportedly only required for the tests
 DEPENDS = "libtasn1 coreutils-native expect-native socat-native glib-2.0 net-tools-native libtpm json-glib"
 
-SRCREV = "92a7035f45d9b08aa7c6b8bd6fa4c6916ef07a9e"
+SRCREV = "f2268eebb0d1adf89bad83fa4cf91e37b4e3fa53"
 SRC_URI = "git://github.com/stefanberger/swtpm.git;branch=stable-0.7-next;protocol=https \
-           file://ioctl_h.patch \
            "
 PE = "1"
 
-- 
2.25.1



^ permalink raw reply related	[flat|nested] 4+ messages in thread
end of thread, other threads:[~2022-07-31  5:49 UTC | newest]

Thread overview: 4+ messages (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2022-07-31  5:47 [meta-security][PATCH 1/4] ibmtpm2tss: update version format Armin Kuster
2022-07-31  5:47 ` [meta-security][PATCH 2/4] ibmswtpm2: fix UPSTREAM_CHECK Armin Kuster
2022-07-31  5:47 ` [meta-security][PATCH 3/4] ibmswtpm2: update to 1682 Armin Kuster
2022-07-31  5:47 ` [meta-security][PATCH 4/4] swtpm: update to 0.7.3 Armin Kuster

